--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,15 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cardView"
+    android:layout_height="100dp"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:background="E2E2E2">
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    card_view:cardBackgroundColor="#ffff"
+    card_view:cardCornerRadius="8dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:orientation="vertical"
+    android:foreground="?android:attr/selectableItemBackground">
 
-    <TextView
-        android:id="@+id/textViewName"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:textSize="20dp"/>
+        android:layout_height="match_parent">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/imageViewFruit"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/apple_bg" />
+
+        <TextView
+            android:id="@+id/nameFruit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="101dp"
+            android:layout_toEndOf="@+id/imageViewFruit"
+            android:gravity="center"
+            android:text="Prueba"
+            android:textSize="13dp" />
+
+        <TextView
+            android:id="@+id/descriptionFuit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nameFruit"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="-4dp"
+            android:layout_marginBottom="28dp"
+            android:layout_toEndOf="@+id/imageViewFruit"
+            android:text="Apple Description "
+            android:gravity="center"
+            android:textSize="10dp" />
+
+        <TextView
+            android:id="@+id/textViewCounter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="78dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="1dp"
+            android:text="0"
+            android:textSize="14dp" />
+
+
+    </RelativeLayout>
+
+
+
+
+
+
+    </android.support.v7.widget.CardView>
+
